--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500&family=Sen:wght@800&family=Work+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="styles/gamer.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="nav-container">
+            <div class="nav-title-icon">
+                <img src="images/Frame.png" alt="">
+                <h1 class="nav-game"><span id="g-colour">G</span>amer</h1>
+            </div>
+            <div class="nav-li">
+                <a href="">About Us</a>
+                <a href="">Developer</a>
+                <a href="">Follow Us</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
