2nd section done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,36 @@
         </nav>
     </header>
     <main>
-
+        <section class="banner-container">
+            <div class="banner-content">
+                <h5 class="banner-name">Play Like The</h5>
+                <h1 id="goat">G.O.A.T</h1>
+                <p>1-Click instant play</p>
+                <p>No Download</p>
+                <p>1000s of supported online games</p>
+                <div class="button">
+                    <button id="sing" class="btn-primary">Sign In</button>
+                    <button id="go" class="btn-primary">Go Rogue</button>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </section>
+        <section class="poster-container">
+            <div>
+                <img class="poster-img" src="images/pngwing 4.png" alt="">
+            </div>
+            <div class="poster-discription">
+                <h1 class="poster-discription-title">We are gamer</h1>
+                <p class="poster-discription-info">An international digital games and entertainment company. We develop,
+                    publish and distribute multiplayer mobile games. We reach over 400 million players each month and
+                    our audience keeps growing.</p>
+                <button id="more" class="btn-primary">know more</button>
+                <p><span class="our">Our purpose...</span><br>
+                    <span class="unleash">“unleash the gamer in everyone”</span></p>
+            </div>
+        </section>
     </main>
     <footer>
 
