--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav-container">
             <div class="nav-title-icon">
-                <img src="images/Frame.png" alt="">
+                <img class="img-frame" src="images/Frame.png" alt="">
                 <h1 class="nav-game"><span id="g-colour">G</span>amer</h1>
             </div>
             <div class="nav-li">
@@ -57,6 +57,39 @@
                 <button id="more" class="btn-primary">know more</button>
                 <p><span class="our">Our purpose...</span><br>
                     <span class="unleash">“unleash the gamer in everyone”</span></p>
+            </div>
+        </section>
+        <section class="card-contaienr">
+            <h2 class="card-container-title">Online Games <span class="funny">Funny Videos</span></h2>
+            <p class="card-container-p">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="card-styles">
+                <div class="card">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+            </div>
+        </section>
+        <!-- -------------play games ----------- -->
+        <section class="play-games">
+            <div>
+                <img src="images/Rectangle 67.png" alt="">
+                
+            </div>
+            <div class="play-games-content">
+                <h3 class="play-games-title">Play Games Online Anywhere, Anytime!</h3>
+                <p class="play-games-discription">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </section>
     </main>
