--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         <!-- -------------play games ----------- -->
         <section class="play-games">
             <div>
-                <img src="images/Rectangle 67.png" alt="">
+                <img class="img7" src="images/Rectangle 67.png" alt="">
                 
             </div>
             <div class="play-games-content">
-                <h3 class="play-games-title">Play Games Online Anywhere, Anytime!</h3>
+                <h3 class="play-games-title">Play Games <br>Online Anywhere, Anytime!</h3>
                 <p class="play-games-discription">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </section>
