--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +18,7 @@
         <nav class="nav-container">
             <div class="nav-title-icon">
                 <img class="img-frame" src="images/Frame.png" alt="">
-                <h1 class="nav-game"><span id="g-colour">G</span>amer</h1>
+                <h1 class="nav-game"><span class="g-colour">G</span>amer</h1>
             </div>
             <div class="nav-li">
                 <a href="">About Us</a>
@@ -32,7 +31,7 @@
         <section class="banner-container">
             <div class="banner-content">
                 <h5 class="banner-name">Play Like The</h5>
-                <h1 id="goat">G.O.A.T</h1>
+                <h1 class="goat">G.O.A.T</h1>
                 <p>1-Click instant play</p>
                 <p>No Download</p>
                 <p>1000s of supported online games</p>
@@ -56,7 +55,8 @@
                     our audience keeps growing.</p>
                 <button id="more" class="btn-primary">know more</button>
                 <p><span class="our">Our purpose...</span><br>
-                    <span class="unleash">“unleash the gamer in everyone”</span></p>
+                    <span class="unleash">“unleash the gamer in everyone”</span>
+                </p>
             </div>
         </section>
         <section class="card-contaienr">
@@ -83,18 +83,83 @@
         </section>
         <!-- -------------play games ----------- -->
         <section class="play-games">
-            <div>
+            <div class="imgs-content">
                 <img class="img7" src="images/Rectangle 67.png" alt="">
-                
+                <img class="img78" src="images/Rectangle 78.png" alt="">
             </div>
             <div class="play-games-content">
-                <h3 class="play-games-title">Play Games <br>Online Anywhere, Anytime!</h3>
-                <p class="play-games-discription">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+                <h3 class="play-games-title"> <span class="play">Play Games Online</span> Anywhere, Anytime!</h3>
+                <p class="play-games-discription">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can
+                    play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
+        <section class="icons">
+            <div>
+                <img src="images/Rectangle 11.png" alt="">
+                <p>Action Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 12.png" alt="">
+                <p>Adventure Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 13.png" alt="">
+                <p>Arcade Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 14.png" alt="">
+                <p>Educational Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 15.png" alt="">
+                <p>Word Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 16.png" alt="">
+                <p>Role Palying Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 17.png" alt="">
+                <p>Music & Audio Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 18.png" alt="">
+                <p>Puzzle Games</p>
+            </div>
+            <div>
+                <img src="images/Rectangle 19.png" alt="">
+                <p>Strategy Games</p>
             </div>
         </section>
     </main>
     <footer>
+        <section class="footer">
+            <div class="footer-container">
+                <img src="images/Frame.png" alt="">
+                <h2 class="nav-game"><span class="g-colour">G</span><span class="amer">amer</span></h2>
+            </div>
+            <div class="footer-title">
+                <p>Our Story</p>
+                <p>Games</p>
+                <p>Web Games</p>
+                <p>Careers</p>
+                <p>Support</p>
+                <p>My Account</p>
+            </div>
+            <div class="footer-icons">
 
+
+            </div>
+            <div class="footer-discrption">
+                <p>Terms and Conditions</p>
+                <p>Privacy Policy</p>
+                <p>Cookie Policy</p>
+                <p>Privacy Settings</p>
+            </div>
+            <div class="footer-finish">
+                <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+            </div>
+        </section>
     </footer>
 </body>
 
