--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,11 +31,13 @@
     <main>
         <section class="banner-container">
             <div class="banner-content">
-                <h5 class="banner-name">Play Like The</h5>
-                <h1 class="goat">G.O.A.T</h1>
-                <p>1-Click instant play</p>
-                <p>No Download</p>
-                <p>1000s of supported online games</p>
+                <div class="banner">
+                    <h5 class="banner-name">Play Like The</h5>
+                    <h1 class="goat">G.O.A.T</h1>
+                    <p>1-Click instant play</p>
+                    <p>No Download</p>
+                    <p>1000s of supported online games</p>
+                </div>
                 <div class="button">
                     <button id="sing" class="btn-primary">Sign In</button>
                     <button id="go" class="btn-primary">Go Rogue</button>
